# GameOfLife

./: CMakeLists.txt  README.md  a.out  ansi1  ansi1.c  gameOfLifeStep3  matrix.txt  step3.c  tempCodeRunnerFile.c  version1  version1.c
lib/: CMakeLists.txt  Makefile  board.c  board.h  cmake_install.cmake  readInput.c  readInput.h
start_configs/: matrix3.txt  pulsar.txt  random.txt  stripes.txt
tests/: CMakeLists.txt  a.out  test.c
